--- a/style.css
+++ b/style.css
@@ -25,8 +25,13 @@
     position: relative;
     height: 400px;
 }
-
+.carouselExampleIndicators{
+    position: relative;
+    width: 50px;
+}
 #cimg{
+    position: relative;
+    top: -300px;
     
     filter: brightness(50%);   
 }
@@ -34,27 +39,45 @@
     width: 24%;
     z-index: 1;
     position: absolute;
-    top: 36%;
+    top: 17%;
     left: 38%;
 }
 #feature{
-    color: rgb(255, 255, 255);
+    color: rgb(255, 224, 186);
     width: 100%;
     text-align: center;
     position: absolute;
     z-index: 1;
-    bottom: 26%;
+    bottom: 90%;
     font-size: xxx-large;
     
 }
-@media only screen and (max-width: 800px) {
+.carousel-inner{
+    height: 700px;
+    
+}
+
+@media only screen and (max-width: 900px) {
     #bgimg{
         height: 65%;
         width: 155%;
         left: -10%;
     }
     #feature{
-        bottom: 10%;
+        bottom: 15%;
         font-size: x-large;
     }
+    #timg{
+        width: 30%;
+        z-index: 1;
+        position: absolute;
+        top: 33%;
+        left: 35%;
+    }
+    #cimg{
+        position: relative;
+        top: 0px;
+        filter: brightness(50%);   
+    }
+    
 }
