--- a/style.css
+++ b/style.css
@@ -1,169 +1,196 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-#logo{
-    width: 50px;
+#logo {
+  width: 50px;
 }
-#loginbtn1{
-    position: absolute;
-    top: 15px;
-    right: 160px;
-    box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
-    transition-duration: 0.3s;
+#loginbtn1 {
+  position: absolute;
+  top: 15px;
+  right: 160px;
+  box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
+  transition-duration: 0.3s;
 }
-#loginbtn{
-    position: absolute;
-    top: 15px;
-    right: 80px;
-    box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
-    transition-duration: 0.3s;
+#loginbtn {
+  position: absolute;
+  top: 15px;
+  right: 80px;
+  box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
+  transition-duration: 0.3s;
 }
-#lgbtn1{
-    position: absolute;
-    font-size: larger;
-    padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    right: calc(30vh);
-    bottom: calc(25vh); 
-    box-shadow: 3px 4px 10px rgba(0, 0, 0.1); 
+#lgbtn1 {
+  position: absolute;
+  font-size: larger;
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  right: calc(30vh);
+  bottom: calc(25vh);
+  box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
 }
-#lgbtn{
-    position: absolute;
-    font-size: larger;
-    padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    right: 15vh;
-    bottom: calc(25vh);   
-    box-shadow: 3px 4px 10px rgba(0, 0, 0.1); 
+#lgbtn {
+  position: absolute;
+  font-size: larger;
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  right: 15vh;
+  bottom: calc(25vh);
+  box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
 }
-.bg{
-    position: relative;
+.bg {
+  position: relative;
 }
-#bgimg{
-    position: relative;
-    padding-top: 50px;
-    height: calc(110vh);
-    width: 100%; 
-    
+#bgimg {
+  position: relative;
+  padding-top: 50px;
+  height: calc(110vh);
+  width: 100%;
 }
-.navlink active{
-    color: rgb(33, 138, 47);
+.navlink active {
+  color: rgb(33, 138, 47);
 }
-#carouselExampleIndicators{
-    position: relative;
-    left: 20px;
-    top: 30px;
-    width: calc(100vh);
-    
+#carouselExampleIndicators {
+  position: relative;
+  left: 20px;
+  top: 30px;
+  width: calc(100vh);
 }
-.carousel-inner{
-    border-radius: 30px;
+.carousel-inner {
+  border-radius: 30px;
 }
-#cimg{
-    position: relative;
-    top: -250px;
-    border-radius: 30px;
-    filter: brightness(50%);   
+#cimg {
+  position: relative;
+  top: -250px;
+  border-radius: 30px;
+  filter: brightness(50%);
 }
-#timg{
-    width: 24%;
-    z-index: 1;
-    position: absolute;
-    top: 25%;
-    left: 38%;
+#timg {
+  width: 24%;
+  z-index: 1;
+  position: absolute;
+  top: 25%;
+  left: 38%;
 }
-#feature{
-    color: rgb(255, 224, 186);
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    z-index: 1;
-    bottom: 85%;
-    font-size: xx-large;
-    
+#feature {
+  color: rgb(255, 224, 186);
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+  bottom: 85%;
+  font-size: xx-large;
 }
-.carousel-inner{
-    height: 700px;
-    
+.carousel-inner {
+  height: 700px;
 }
-.courosal{
-    position: relative;
-    height: calc(73vh);
-    background-image: linear-gradient(to right, rgba(255, 0, 0, 0) , rgba(117, 142, 138, 0.739));
+.courosal {
+  position: relative;
+  height: calc(73vh);
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 0, 0, 0),
+    rgba(117, 142, 138, 0.739)
+  );
 }
-#utility{
-    position: absolute;
-    font-weight: bolder;
-    font-size: 400%;
-    font-family: sans-serif;
-    right: calc(30vh);
-    top: calc(30vh);
-    color: rgb(17, 109, 45);
+.carousel-indicators {
+  position: relative;
+  top: calc(60vh);
+}
+#modal_img1 {
+  position: relative;
+  width: 120px;
+  left: 20px;
+  border-radius: 100px;
+  transition-duration: 0.3s;
+}
+#modal_img2 {
+  position: relative;
+  width: 120px;
+  right: -90px;
+  border-radius: 100px;
+  transition-duration: 0.3s;
+}
+#modal_img1:hover {
+  width: 140px;
+}
+#modal_img2:hover {
+  width: 140px;
+}
+#utility {
+  position: absolute;
+  font-weight: bolder;
+  font-size: 400%;
+  font-family: sans-serif;
+  right: calc(30vh);
+  top: calc(30vh);
+  color: rgb(17, 109, 45);
 }
 @media only screen and (max-width: 900px) {
-    .bg{
-        position: relative;
-    }
-    #bgimg{
-        position: relative;
-        height: 100%;
-        width: 100%;
-        top: calc(3vh);
-    }
-    #lgbtn1{
-        position: absolute;
-        font-size: small;
-        padding: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-        right: calc(16vh);
-        bottom: calc(0vh); 
-        box-shadow: 3px 4px 10px rgba(0, 0, 0.1); 
-    }
-    #lgbtn{
-        position: absolute;
-        font-size: small;
-        padding: 10px;
-        padding-left: 15px;
-        padding-right: 15px;
-        right: 7vh;
-        bottom: calc(0vh);   
-        box-shadow: 3px 4px 10px rgba(0, 0, 0.1); 
-    }
-    .courosal{
-        position: relative;
-    }
-    .carousel-inner{
-        border-radius: 0px;
-    }
-    #carouselExampleIndicators{
-        position: absolute;
-        left: 0px;
-        top: 4px;
-        width: 100%;
-        height: calc(30vh);
-    }
-    #feature{
-        bottom: 15%;
-        font-size: x-large;
-    }
-    #timg{
-        width: 30%;
-        z-index: 1;
-        position: absolute;
-        top: 33%;
-        left: 35%;
-    }
-    #cimg{
-        position: relative;
-        top: calc(3vh);
-        filter: brightness(50%);  
-        
-    border-radius: 0px; 
-    }
-    
+  .bg {
+    position: relative;
+  }
+  #bgimg {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    top: calc(3vh);
+  }
+  #lgbtn1 {
+    position: absolute;
+    font-size: small;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    right: calc(19vh);
+    bottom: calc(0vh);
+    box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
+  }
+  #lgbtn {
+    position: absolute;
+    font-size: small;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    right: 7vh;
+    bottom: calc(0vh);
+    box-shadow: 3px 4px 10px rgba(0, 0, 0.1);
+  }
+  .courosal {
+    position: relative;
+  }
+  .carousel-indicators {
+    position: relative;
+    top: calc(65vh);
+  }
+  .carousel-inner {
+    border-radius: 0px;
+  }
+  #carouselExampleIndicators {
+    position: absolute;
+    left: 0px;
+    top: 4px;
+    width: 100%;
+    height: calc(30vh);
+  }
+  #feature {
+    bottom: 15%;
+    font-size: x-large;
+  }
+  #timg {
+    width: 30%;
+    z-index: 1;
+    position: absolute;
+    top: 33%;
+    left: 35%;
+  }
+  #cimg {
+    position: relative;
+    top: calc(3vh);
+    filter: brightness(50%);
+
+    border-radius: 0px;
+  }
 }
